# ciel-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install-assets.sh
.cargo/: config.toml
.github/workflows/: ci.yml
ciel/: Cargo.toml
ciel/src/: container.rs  dbus_machine1_machine.rs  dbus_machine1_manager.rs  instance.rs  lib.rs  machine.rs  workspace.rs
ciel/src/fs/: overlayfs.rs
ciel/src/repo/: mod.rs  scan.rs
ciel/testdata/broken-workspace/.ciel/data/: config.toml
ciel/testdata/old-workspace/.ciel/container/instances/test/layers/local/etc/acbs/: forest.conf
ciel/testdata/old-workspace/.ciel/container/instances/test/layers/local/etc/autobuild/: ab4cfg.sh
ciel/testdata/simple-workspace/.ciel/container/instances/test/: config.toml
cli/: Cargo.toml
cli/completions/: _ciel  ciel.bash  ciel.fish
cli/src/: cli.rs  config.rs  download.rs  logger.rs  main.rs  utils.rs
cli/src/actions/: build.rs  container.rs  diagnose.rs  mod.rs  repo.rs  tree.rs  workspace.rs
completions/: _ciel  ciel.bash  ciel.fish
dbus-xml/: org.freedesktop.machine1-machine.xml  org.freedesktop.machine1-manager.xml  org.freedesktop.machine1.xml  org.freedesktop.systemd1.xml
plugins/: ciel-factory-reset  ciel-generate  ciel-pull-topics-as-local  ciel-release  ciel-switchmirror
rfcs/: 001-ciel-rpc.md
src/: actions.rs  build.rs  cli.rs  common.rs  config.rs  container.rs  dbus_machine1.rs  dbus_machine1_machine.rs  diagnose.rs  instance.rs  lib.rs  logging.rs  machine.rs  machined.rs  main.rs  network.rs  overlayfs.rs  repo.rs  syscall.c  workspace.rs
src/actions/: config.rs  container.rs  ipc.rs  mod.rs  onboarding.rs  packaging.rs
src/fs/: mod.rs  overlayfs.rs  tmpfs.rs
src/repo/: mod.rs  monitor.rs  scan.rs
src/rpc/: services.rs
testdata/old-workspace/.ciel/container/instances/test/layers/local/etc/apt/: sources.list
testdata/old-workspace/.ciel/data/: config.toml
testdata/simple-repo/debs/: Packages  Release
testdata/simple-repo/debs/a/: aosc-os-feature-data_20241017.1-0_noarch.deb
testdata/simple-workspace/.ciel/container/instances/tmpfs/: config.toml
