[workspace]
resolver = "2"
members = [
    "ciel/",
    "cli/",
]

[workspace.package]
version = "4.0.0"
description = "An nspawn container manager"
license = "MIT"
authors = ["liushuyu <liushuyu011@gmail.com>", "xtex <xtex@xtexx.eu.org>"]
repository = "https://github.com/AOSC-Dev/ciel-rs"
edition = "2021"

[profile.release]
lto = true

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
pre-release-commit-message = "v{{version}}"
tag-message = "v{{version}}"
tag-name = "v{{version}}"
# we cannot publish to crates.io due to the libmount git dep
publish = false
verify = true
