[package]
name = "ciel-rs"
version = "3.9.11"
description = "An nspawn container manager for distro packaging"
license = "MIT"
authors = ["liushuyu <liushuyu011@gmail.com>"]
repository = "https://github.com/AOSC-Dev/ciel-rs"
resolver = "2"
edition = "2021"

[dependencies]
console = "0.16"
zbus = "^5"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
indicatif = "0.18"
nix = { version = "0.30", features = ["fs", "hostname", "mount", "user"] }
toml = "0.9"
wincode = { version = "0.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
git2 = "0.20"
tar = "0.4"
xz2 = "0.1"
libmount = { git = "https://github.com/liushuyu/libmount", rev = "6fe8dba03a6404dfe1013995dd17af1c4e21c97b" }
libc = "0.2"
adler32 = "1.2"
rayon = "1.11"
tempfile = "3.24"
anyhow = "1.0"
libsystemd-sys = "0.9"
walkdir = "2"
xattr = "^1"
rand = "0.9"
dotenvy = "0.15"
which = "8.0"
sha2 = "0.10"
time = { version = "0.3", default-features = false, features = ["serde-human-readable", "macros"] }
fs3 = "0.5"
clap = { version = "^4", features = ["wrap_help", "string", "env"] }
ctrlc = "^3"
# repo scan
ar = "0.9"
faster-hex = "0.10"
flate2 = "1.1"
tabwriter = { version = "^1", features = ["ansi_formatting"] }
unsquashfs-wrapper =  "0.3"
inotify = "0.11"
zstd = "0.13"
ureq = { version = "^3", features = ["json"] }

[build-dependencies]
clap = { version = "^4", features = ["string", "env"] }
clap_complete = "^4"
anyhow = "^1"

[profile.release]
lto = true
