[package]
name = "ciel"
version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
log = "0.4.25"
thiserror = "2.0.11"
libmount = { git = "https://github.com/liushuyu/libmount", rev = "6fe8dba03a6404dfe1013995dd17af1c4e21c97b" }
nix = { version = "0.29.0", features = ["fs", "hostname", "mount", "signal", "user"] }
walkdir = "2.5.0"
tempfile = "3.15.0"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
test-log = { version = "0.2.17", features = ["log"] }
